// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> when autoFocus should render correctly 1`] = `
.emotion-9 {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: 3;
  cursor: pointer;
}

.emotion-0:checked + .fl-switch__wrapper {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:checked + .fl-switch__wrapper .fl-switch__slider {
  -webkit-transform: translateX(1.5rem);
  -ms-transform: translateX(1.5rem);
  transform: translateX(1.5rem);
  border-color: #1d5794;
}

.emotion-0:focus + .fl-switch__wrapper {
  box-shadow: 0 0 0 1pt #fff,0 0 0 3pt #2875c6;
}

.emotion-0:disabled {
  cursor: default;
}

.emotion-0:disabled + .fl-switch__wrapper {
  opacity: 0.5;
}

.emotion-8 {
  width: 3.375rem;
  height: 1.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 1.125rem;
  background: #fff;
  -webkit-transition-property: background;
  transition-property: background;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-8 {
    width: 3rem;
    height: 1.5rem;
    border-radius: 0.75rem;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: absolute;
  margin: 0 2px;
  top: 3px;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 50%;
  background: #fff;
  z-index: 2;
  box-shadow: 0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-transition-property: translateX(0);
  transition-property: translateX(0);
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-2 {
    top: 3px;
    width: 18px;
    height: 18px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100%;
  margin: 0 0.375rem;
  z-index: 1;
}

.emotion-3 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #fff;
}

.emotion-5 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #848a8a;
}

<label
  className="emotion-9"
>
  <input
    autoFocus={true}
    className="emotion-0"
    type="checkbox"
    value={0}
  />
  <span
    className="fl-switch__wrapper emotion-8"
  >
    <span
      className="fl-switch__slider emotion-2"
    >
      <svg
        className="emotion-1"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="emotion-7"
    >
      <svg
        className="cr-icon emotion-3 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="cr-icon emotion-5 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when checked should render correctly 1`] = `
.emotion-9 {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: 3;
  cursor: pointer;
}

.emotion-0:checked + .fl-switch__wrapper {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:checked + .fl-switch__wrapper .fl-switch__slider {
  -webkit-transform: translateX(1.5rem);
  -ms-transform: translateX(1.5rem);
  transform: translateX(1.5rem);
  border-color: #1d5794;
}

.emotion-0:focus + .fl-switch__wrapper {
  box-shadow: 0 0 0 1pt #fff,0 0 0 3pt #2875c6;
}

.emotion-0:disabled {
  cursor: default;
}

.emotion-0:disabled + .fl-switch__wrapper {
  opacity: 0.5;
}

.emotion-8 {
  width: 3.375rem;
  height: 1.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 1.125rem;
  background: #fff;
  -webkit-transition-property: background;
  transition-property: background;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-8 {
    width: 3rem;
    height: 1.5rem;
    border-radius: 0.75rem;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: absolute;
  margin: 0 2px;
  top: 3px;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 50%;
  background: #fff;
  z-index: 2;
  box-shadow: 0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-transition-property: translateX(0);
  transition-property: translateX(0);
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-2 {
    top: 3px;
    width: 18px;
    height: 18px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100%;
  margin: 0 0.375rem;
  z-index: 1;
}

.emotion-3 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #fff;
}

.emotion-5 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #848a8a;
}

<label
  className="emotion-9"
>
  <input
    checked={true}
    className="emotion-0"
    type="checkbox"
    value={1}
  />
  <span
    className="fl-switch__wrapper emotion-8"
  >
    <span
      className="fl-switch__slider emotion-2"
    >
      <svg
        className="emotion-1"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="emotion-7"
    >
      <svg
        className="cr-icon emotion-3 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="cr-icon emotion-5 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when disabled should render correctly 1`] = `
.emotion-9 {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: 3;
  cursor: pointer;
}

.emotion-0:checked + .fl-switch__wrapper {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:checked + .fl-switch__wrapper .fl-switch__slider {
  -webkit-transform: translateX(1.5rem);
  -ms-transform: translateX(1.5rem);
  transform: translateX(1.5rem);
  border-color: #1d5794;
}

.emotion-0:focus + .fl-switch__wrapper {
  box-shadow: 0 0 0 1pt #fff,0 0 0 3pt #2875c6;
}

.emotion-0:disabled {
  cursor: default;
}

.emotion-0:disabled + .fl-switch__wrapper {
  opacity: 0.5;
}

.emotion-8 {
  width: 3.375rem;
  height: 1.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 1.125rem;
  background: #fff;
  -webkit-transition-property: background;
  transition-property: background;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-8 {
    width: 3rem;
    height: 1.5rem;
    border-radius: 0.75rem;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: absolute;
  margin: 0 2px;
  top: 3px;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 50%;
  background: #fff;
  z-index: 2;
  box-shadow: 0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-transition-property: translateX(0);
  transition-property: translateX(0);
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-2 {
    top: 3px;
    width: 18px;
    height: 18px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100%;
  margin: 0 0.375rem;
  z-index: 1;
}

.emotion-3 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #fff;
}

.emotion-5 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #848a8a;
}

<label
  className="emotion-9"
>
  <input
    className="emotion-0"
    disabled={true}
    type="checkbox"
    value={0}
  />
  <span
    className="fl-switch__wrapper emotion-8"
  >
    <span
      className="fl-switch__slider emotion-2"
    >
      <svg
        className="emotion-1"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="emotion-7"
    >
      <svg
        className="cr-icon emotion-3 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="cr-icon emotion-5 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when empty props should render correctly 1`] = `
.emotion-9 {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: 3;
  cursor: pointer;
}

.emotion-0:checked + .fl-switch__wrapper {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:checked + .fl-switch__wrapper .fl-switch__slider {
  -webkit-transform: translateX(1.5rem);
  -ms-transform: translateX(1.5rem);
  transform: translateX(1.5rem);
  border-color: #1d5794;
}

.emotion-0:focus + .fl-switch__wrapper {
  box-shadow: 0 0 0 1pt #fff,0 0 0 3pt #2875c6;
}

.emotion-0:disabled {
  cursor: default;
}

.emotion-0:disabled + .fl-switch__wrapper {
  opacity: 0.5;
}

.emotion-8 {
  width: 3.375rem;
  height: 1.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 1.125rem;
  background: #fff;
  -webkit-transition-property: background;
  transition-property: background;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-8 {
    width: 3rem;
    height: 1.5rem;
    border-radius: 0.75rem;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: absolute;
  margin: 0 2px;
  top: 3px;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 50%;
  background: #fff;
  z-index: 2;
  box-shadow: 0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-transition-property: translateX(0);
  transition-property: translateX(0);
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-2 {
    top: 3px;
    width: 18px;
    height: 18px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100%;
  margin: 0 0.375rem;
  z-index: 1;
}

.emotion-3 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #fff;
}

.emotion-5 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #848a8a;
}

<label
  className="emotion-9"
>
  <input
    className="emotion-0"
    type="checkbox"
    value={0}
  />
  <span
    className="fl-switch__wrapper emotion-8"
  >
    <span
      className="fl-switch__slider emotion-2"
    >
      <svg
        className="emotion-1"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="emotion-7"
    >
      <svg
        className="cr-icon emotion-3 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="cr-icon emotion-5 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when id, name should render correctly 1`] = `
.emotion-9 {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: 3;
  cursor: pointer;
}

.emotion-0:checked + .fl-switch__wrapper {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:checked + .fl-switch__wrapper .fl-switch__slider {
  -webkit-transform: translateX(1.5rem);
  -ms-transform: translateX(1.5rem);
  transform: translateX(1.5rem);
  border-color: #1d5794;
}

.emotion-0:focus + .fl-switch__wrapper {
  box-shadow: 0 0 0 1pt #fff,0 0 0 3pt #2875c6;
}

.emotion-0:disabled {
  cursor: default;
}

.emotion-0:disabled + .fl-switch__wrapper {
  opacity: 0.5;
}

.emotion-8 {
  width: 3.375rem;
  height: 1.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 1.125rem;
  background: #fff;
  -webkit-transition-property: background;
  transition-property: background;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-8 {
    width: 3rem;
    height: 1.5rem;
    border-radius: 0.75rem;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: absolute;
  margin: 0 2px;
  top: 3px;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 50%;
  background: #fff;
  z-index: 2;
  box-shadow: 0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-transition-property: translateX(0);
  transition-property: translateX(0);
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-2 {
    top: 3px;
    width: 18px;
    height: 18px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100%;
  margin: 0 0.375rem;
  z-index: 1;
}

.emotion-3 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #fff;
}

.emotion-5 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #848a8a;
}

<label
  className="emotion-9"
  htmlFor="feature1-id"
>
  <input
    className="emotion-0"
    id="feature1-id"
    name="feature1"
    type="checkbox"
    value={0}
  />
  <span
    className="fl-switch__wrapper emotion-8"
  >
    <span
      className="fl-switch__slider emotion-2"
    >
      <svg
        className="emotion-1"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="emotion-7"
    >
      <svg
        className="cr-icon emotion-3 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="cr-icon emotion-5 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when passing data-props should render correctly 1`] = `
.emotion-9 {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: 3;
  cursor: pointer;
}

.emotion-0:checked + .fl-switch__wrapper {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:checked + .fl-switch__wrapper .fl-switch__slider {
  -webkit-transform: translateX(1.5rem);
  -ms-transform: translateX(1.5rem);
  transform: translateX(1.5rem);
  border-color: #1d5794;
}

.emotion-0:focus + .fl-switch__wrapper {
  box-shadow: 0 0 0 1pt #fff,0 0 0 3pt #2875c6;
}

.emotion-0:disabled {
  cursor: default;
}

.emotion-0:disabled + .fl-switch__wrapper {
  opacity: 0.5;
}

.emotion-8 {
  width: 3.375rem;
  height: 1.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 1.125rem;
  background: #fff;
  -webkit-transition-property: background;
  transition-property: background;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-8 {
    width: 3rem;
    height: 1.5rem;
    border-radius: 0.75rem;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: absolute;
  margin: 0 2px;
  top: 3px;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border: solid 1px #abb3b3;
  border-radius: 50%;
  background: #fff;
  z-index: 2;
  box-shadow: 0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-transition-property: translateX(0);
  transition-property: translateX(0);
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
  transition-timing-function: cubic-bezier(0.68,1.46,0.1,1.06);
}

@media screen and (min-width:601px) {
  .emotion-2 {
    top: 3px;
    width: 18px;
    height: 18px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100%;
  margin: 0 0.375rem;
  z-index: 1;
}

.emotion-3 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #fff;
}

.emotion-5 {
  vertical-align: text-bottom;
  width: 0.75rem;
  height: 0.75rem;
  fill: #848a8a;
}

<label
  className="emotion-9"
>
  <input
    className="emotion-0"
    data-property1={true}
    type="checkbox"
    value={0}
  />
  <span
    className="fl-switch__wrapper emotion-8"
  >
    <span
      className="fl-switch__slider emotion-2"
    >
      <svg
        className="emotion-1"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="emotion-7"
    >
      <svg
        className="cr-icon emotion-3 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="cr-icon emotion-5 emotion-4"
        height="0.75rem"
        viewBox="0 0 16 16"
        width="0.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;
